--- a/templates/baseNews.html
+++ b/templates/baseNews.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <title>{% block title %}News across the world{% endblock %}</title>
+    <title>{% block title %}News across the world!!!{% endblock %}</title>
 </head>
 <body>
 
