--- a/templates/baseNews.html
+++ b/templates/baseNews.html
@@ -1,25 +1,28 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <title>{% block title %}News across the world!!!{% endblock %}</title>
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <title>{% block title %}Exploring the world{% endblock %}</title>
 </head>
+
 <body>
 
-{% include 'inc/_nav.html' %}
+    {% include 'inc/_nav.html' %}
 
-<div class="container mt-3">
-    {% now "Y-m-d H:i" %}
-    <div class="row">
-        {% block sidebar %}Side bar - extension block{% endblock sidebar %}
-        {% block content %}Content -  extension block{% endblock content %}
+    <div class="container mt-3">
+        {% now "Y-m-d H:i" %}
+        <div class="row">
+            {% block sidebar %}Side bar - extension block{% endblock sidebar %}
+            {% block content %}Content - extension block{% endblock content %}
+        </div>
     </div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
