--- a/templates/baseNews.html
+++ b/templates/baseNews.html
@@ -16,8 +16,12 @@
     <div class="container mt-3">
         {% now "Y-m-d H:i" %}
         <div class="row">
-            {% block sidebar %}Side bar - extension block{% endblock sidebar %}
-            {% block content %}Content - extension block{% endblock content %}
+            <div class="col-md-3">
+                {% block sidebar %}Side bar - extension block{% endblock sidebar %}
+            </div>
+            <div class="col-md-9">
+                {% block content %}Content - extension block{% endblock content %}
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
