--- a/templates/inc/sidebar.html
+++ b/templates/inc/sidebar.html
@@ -1,4 +1,5 @@
 {% load news_tags %}
+{% comment %}
 <div class="list-group">
     {% get_categories as categories %}
     {% for item in categories %}
@@ -8,7 +9,7 @@
         </a>
     {% endfor %}
 </div>
-
+{% endcomment %}
 <br>
 
 {% show_categories %}
