--- a/templates/baseNews.html
+++ b/templates/baseNews.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{% static 'news/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'news/test.css' %}" rel="stylesheet">
+{#    <link href="{% static 'news/test.css' %}" rel="stylesheet">#}
 {#    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"#}
 {#        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">#}
     <title>{% block title %}Exploring the world{% endblock %}</title>
