--- a/templates/inc/_nav.html
+++ b/templates/inc/_nav.html
@@ -8,10 +8,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Main</a>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Главная</a>
                 </li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Add
-                    news</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'add_news' %}">Добавить новость</a></li>
             </ul>
         </div>
     </div>
