--- a/templates/news/add_news.html
+++ b/templates/news/add_news.html
@@ -10,9 +10,62 @@
 
 {% block content %}
     <h1>Добавление новости</h1>
-    <form action="{% url 'add_news' %}  method='POST'">
+    <form action="{% url 'add_news' %}"  method='post'>
         {% csrf_token %}
+
+        <!-- Ручной вывод формы -->
+        {% comment %}
+        {{ form.non_field_errors }}
+        <div class="form-group">
+            <label for="{{ form.title.id_for_label }}">Название: </label>
+            {{ form.title }}
+            <div class="invalid-feedback">
+                {{ form.title.errors }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="{{ form.content.id_for_label }}">Текст статьи: </label>
+            {{ form.content }}
+            <div class="invalid-feedback">
+                {{ form.content.errors }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="{{ form.is_published.id_for_label }}">Опубликована ли статья: </label>
+            {{ form.is_published }}
+            <div class="invalid-feedback">
+                {{ form.is_published.errors }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="{{ form.category.id_for_label }}">Категория: </label>
+            {{ form.category }}
+            <div class="invalid-feedback">
+                {{ form.category.errors }}
+            </div>
+        </div>
+        {% endcomment %}
+
+
+        <!-- Автоматический вывод формы -->
         {{ form.as_p }}
+
+
+        <!-- Полуавтоматический вывод формы -->
+        {% comment %}
+        {% for field in form %}
+            <div class="form-group">
+                {{ field.label_tag }}
+                {{ field }}
+                <div class="invalid-feedback">
+                    {{ field.errors }}
+                </div>
+            </div>
+        {% endfor %}
+        {% endcomment %}
         <button type="submit" class="btn btn-primary btn-block">Добавить новость</button>
     </form>
 {% endblock %}
