--- a/templates/news/news_list.html
+++ b/templates/news/news_list.html
@@ -1,7 +1,7 @@
 {% extends 'baseNews.html' %}
 
 {% block title %}
-    {{ title }} :: {{ block.super }}
+    List of news :: {{ block.super }}
 {% endblock %}
 
 {% block sidebar %}
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-        {% for item in news %}
+        {% for item in object_list %}
             <div class="card mb-3">
                 <div class="card-header">
                     Category: <a href="{{ item.category.get_absolute_url }}">{{ item.category }}</a>
