--- a/templates/news/list_categories.html
+++ b/templates/news/list_categories.html
@@ -3,6 +3,7 @@
         <a href="{{ item.get_absolute_url }}" class="list-group-item"
            aria-current="true">
             {{ item.title }}
+         <span class="badge badge-primary badge-pill">{{ item.cnt }}</span>
         </a>
     {% endfor %}
 </div>
