--- a/templates/inc/_nav.html
+++ b/templates/inc/_nav.html
@@ -12,6 +12,9 @@
                 {% if request.user.is_authenticated %}
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'add_news' %}">Добавить
                         новость</a></li>
+
+                <li class="nav-item"><a class="nav-link active" aria-current="page"
+                        href="{% url 'email_sending' %}">Отправить письмо</a></li>
                 {% endif %}
             </ul>
         </div>
